--- a/配置文件/nginx.conf
+++ b/配置文件/nginx.conf
@@ -39,3 +39,21 @@ server {
     }
 
 }
+
+
+server {
+    listen       80;
+    listen       443;
+    server_name  a.domain.com b.domain.com;
+        root /home/www/vhost/html;
+        error_log /home/www/nginx/logs/err.log;
+                access_log /home/www/nginx/logs/access.log php-fpm-main;
+        location / {
+                proxy_set_header Host www.c5game.com;
+        proxy_set_header X-Real-IP $remote_addr;
+                proxy_set_header Cookie $http_cookie;
+        proxy_set_header X-Forwarded-For $proxy_add_x_forwarded_for;
+                proxy_pass http://127.0.0.1:443/api/;
+    }
+}
+
